--- a/style3_start.css
+++ b/style3_start.css
@@ -1,5 +1,6 @@
-h1 {
+<header class="header"> {
     font-size: 45px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: purple;
+    border:1px solid black
 }
