--- a/style3_start.css
+++ b/style3_start.css
@@ -5,3 +5,10 @@ h1 {
     border:1px solid black
     
 }
+h3 {
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: purple;
+    border:1px solid black
+    
+}
