--- a/style3_start.css
+++ b/style3_start.css
@@ -1,13 +1,13 @@
 h1 {
-    font-size: 45px;
-    font-family: Arial, Helvetica, sans-serif;
     background-color: purple;
     border:1px solid black
+    font-size: 45px;
+    color:white
+
     
 }
 h3 {
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
     background-color: purple;
     border:1px solid black
     
