--- a/style3_start.css
+++ b/style3_start.css
@@ -1,4 +1,5 @@
 h1 {
+    padding: 30px
     background-color: purple;
     border:1px solid black
     font-size: 45px;
@@ -7,8 +8,9 @@ h1 {
     
 }
 h3 {
-    font-size: 25px;
+    padding: 30px
     background-color: purple;
     border:1px solid black
-    
+    font-size: 45px;
+    color:white
 }
