--- a/style3_start.css
+++ b/style3_start.css
@@ -1,16 +1,15 @@
 h1 {
-    padding: 30px
     background-color: purple;
-    border:1px solid black
     font-size: 45px;
     color:white
-
-    
+}
+    p1 {
+        background-color: purple;
+        font-size: 25px;
+        color:white
 }
 h3 {
-    padding: 30px
     background-color: purple;
-    border:1px solid black
     font-size: 45px;
     color:white
 }
