--- a/style3_start.css
+++ b/style3_start.css
@@ -2,6 +2,7 @@ h1 {
     background-color: purple;
     font-size: 45px;
     color:white
+    margin: 10px 0;
 }
     p1 {
         background-color: purple;
