--- a/style3_start.css
+++ b/style3_start.css
@@ -1,16 +1,30 @@
 h1 {
     background-color: purple;
+    background-size: 150;
     font-size: 45px;
-    color:white
+    color:white;
     margin: 10px 0;
 }
     p1 {
         background-color: purple;
         font-size: 25px;
-        color:white
+        color:white;
+        margin: 10px 0;
+}
+h2 {
+    background-color: white;
+    font-size: 45px;
+    color:black;
+    margin: 10px 0;
+}
+    p2 {
+        background-color: white;
+        font-size: 25px;
+        color:black;
+        margin: 10px 0;
 }
 h3 {
     background-color: purple;
     font-size: 45px;
-    color:white
+    color:white;
 }
