--- a/style3_start.css
+++ b/style3_start.css
@@ -1,30 +1,21 @@
-h1 {
-    background-color: purple;
-    background-size: 150;
-    font-size: 45px;
-    color:white;
+.content {
+    border: 1px solid black;
+    display: inline-block;
+    padding: 30px;
     margin: 10px 0;
-}
-    p1 {
-        background-color: purple;
-        font-size: 25px;
-        color:white;
-        margin: 10px 0;
-}
-h2 {
-    background-color: white;
-    font-size: 45px;
-    color:black;
-    margin: 10px 0;
-}
-    p2 {
-        background-color: white;
-        font-size: 25px;
-        color:black;
-        margin: 10px 0;
-}
-h3 {
-    background-color: purple;
-    font-size: 45px;
-    color:white;
-}
+ }
+ 
+   .header {
+   color: white;
+   background: Purple;
+   padding: 30px;
+   display: inline-block;
+   margin: 10px 0;
+  }
+ .footer {
+   color: white;
+   background: Purple;
+   padding: 30px;
+   display: inline-block;
+   margin: 10px 0;
+ </style>
